--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
+  background-image: url('./img/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
-
 .pomodoro {
   display: flex;
   flex-direction: column;
@@ -9,8 +12,9 @@
   justify-content: center;
   width: 20em;
   height: 20em;
-  background-color: rgb(178, 202, 174);
+  background-color: rgb(197, 200, 230);
   border-radius: 200px;
+  margin: 0 auto;
 }
 
 .increment-btn {
@@ -19,16 +23,18 @@
   outline: none;
   cursor: pointer;
   color: rgb(70, 66, 80);
+  font-size: 1em;
+  padding: 0.5em;
 }
 
 .timer-settings {
   display: flex;
   flex-direction: row;
+  font-size: 3em;
 }
 
 .navigation {
-  
-  background-color: rgb(196, 200, 255);
+  background-color: rgb(226, 229, 248);
 }
 
 .nav-contents {
@@ -49,4 +55,48 @@
   float: left;
   padding: 2em;
   margin-right: auto;
+}
+
+.level-wrapper {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(255, 189, 200);
+  width: fit-content;
+  padding: 1.5em;
+  border-radius: 20px;
+  margin: 1em;
+}
+
+.level-bar {
+  width: 20vw;
+  height: 0.8em;
+  background-color: #fff;
+  border-radius: 10px;
+  border-width: 1px;
+  border-color: black;
+  border-style: solid;
+  overflow: hidden;
+}
+
+.level-prog {
+  background-color: rgb(255, 149, 164);
+  border-radius: 10px;
+  width: 4em;
+  height: 1em;
+}
+
+.level-prog-wrapper {
+  display: flex;
+  flex-direction: row;
+  font-size: 0.9em;
+  align-items: center;
+}
+
+.level-exp {
+  font-size: 0.8em;
+  text-align: left;
+}
+
+.level-bar-exp-wrapper {
+  margin-left: 1em;
 }
