--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,10 @@ a {
   padding: .5rem;
 }
 
+.contribution-graph ul {
+  list-style: none;
+}
+
 .months { 
   grid-area: months; 
   display: grid;
@@ -241,4 +245,24 @@ a {
 .squares {
   grid-auto-flow: column;
   grid-auto-columns: var(--square-size);
+}
+
+.days li:nth-child(odd) {
+  visibility: hidden;
+}
+
+.squares li {
+  background-color: #ebedf0;
+}
+
+.squares li[data-level="1"] {
+  background-color: #c6e48b;
+}
+
+.squares li[data-level="2"] {
+  background-color: #7bc96f;
+}
+
+.squares li[data-level="3"] {
+  background-color: #196127;
 }
