--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@
 }
 
 a {
-  color: rgb(255, 149, 164);
+  color: rgb(144, 123, 219);
+  text-decoration: none;
 }
 
 .Contents {
@@ -51,11 +52,13 @@ a {
   color: #fff;
 }
 
+/* Nav Bar Styling */
 .navigation {
   background-color: transparent;
   display: flex;
   justify-content: space-between;
   padding: 2em;
+  align-items: center;
 }
 
 .nav-labels {
@@ -68,54 +71,17 @@ a {
 
 .nav-labels a {
   text-decoration: none;
-  color: rgb(77, 77, 77);
+  color: rgb(62, 53, 85);
 }
 
 .logo {
-  z-index: -999;
   display: flex;
   flex-direction: row;
-  top: 0;
 }
 
 .logo-img {
-  width: 3rem;
+  width: 2rem;
   padding-right: 1rem;
-}
-
-.level-wrapper {
-  float: right;
-  display: flex;
-  flex-direction: column;
-  width: fit-content;
-  padding: 1.5em;
-  border-radius: 20px;
-  margin: 1em;
-  text-align: left;
-  font-size: 0.8em;
-}
-
-.level-bar {
-  width: 20vw;
-  height: 0.8em;
-  background-color: #fff;
-  border-radius: 10px;
-  border-width: 1px;
-  overflow: hidden;
-}
-
-.level-prog {
-  top: 0;
-  left: 0;
-  background-color: rgb(255, 149, 164);
-  border-radius: 10px;
-  width: 4em;
-  height: 0.8em;
-}
-
-.level-user {
-  display: flex;
-  justify-content: space-between;
 }
 
 .start-btn {
@@ -158,7 +124,7 @@ a {
   padding: .8em 3em;
   outline: none;
   border: none;
-  background-color: rgb(255, 149, 164);
+  background-color: rgb(185, 167, 248);
   color: #fff;
   font-family: 'Poppins', sans-serif;
   font-size: .9em;
@@ -220,18 +186,18 @@ a {
 }
 
 .squares li {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(230, 230, 230);
   border-radius: 2px;
 }
 
 .squares li[data-level="1"] {
-  background-color: #b3e7ff;
+  background-color: #c6deff;
 }
 
 .squares li[data-level="2"] {
-  background-color: #6193ff;
+  background-color: #809dff;
 }
 
 .squares li[data-level="3"] {
-  background-color: #8165ce;
+  background-color: #6158e4;
 }
