--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
   background-size: cover;
   height: 100%;
   width: 100%;
-  position: fixed;
   font-family: 'Poppins', sans-serif;
   color: rgb(62, 53, 85);
 }
@@ -20,8 +19,11 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+}
+
+.full-width{
   width: 100vw;
+  margin: 0 10rem;
 }
 
 .pomodoro {
@@ -203,19 +205,47 @@ a {
   background-color: rgb(114, 96, 218);
 }
 
-/* Dashboard Status Cards */
+/* Dashboard Data Cards */
+
+.dashboard-tiles {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-areas: 
+  "profile-section small-stats-section"
+  "today-section small-stats-section";
+  justify-content: space-between;
+}
+
+/* Dashboard Profile Section */
+.profile-section {
+  display: flex;
+  grid-area: profile-section;
+}
+
+.profile-pic {
+  width: auto;
+  height: 5rem;
+  border-radius: 500px;
+  padding: 0 1rem;
+}
+
 .statcard-small {
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
-  width: 1fr;
+  padding: .5rem 2rem;
   border-radius: 1rem;
-  background-color: rgb(227, 229, 250);
+  background-color: rgb(238, 240, 253);
   margin: 0.5rem;
 }
 
-/* Profile Pic */
-.profile-pic {
-  width: 5rem;
-  height: auto;
+.today-stats-group {
+  grid-area: today-section;
+}
+
+.today-stat {
+  text-align: left;
+}
+
+.small-stats-group {
+  grid-area: small-stats-section;
 }
