--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,12 @@ a {
   text-decoration: none;
 }
 
+ul {
+  padding-inline-start: 1em;
+  margin-block-start: 0.3em;
+  margin-block-end: 0.3em;
+}
+
 .Contents {
   display: flex;
   justify-content: center;
@@ -60,7 +66,7 @@ a {
   background-color: transparent;
   display: flex;
   justify-content: space-between;
-  padding: 2em;
+  padding:  1em 2em 2em 2em;
   align-items: center;
 }
 
@@ -144,7 +150,7 @@ a {
 .contribution-graph {
   display: inline-grid;
   grid-template-areas: 
-  "empty contributions"
+  ". contributions"
   "empty months" 
   "days squares";
   grid-template-columns: auto 1fr;
@@ -158,8 +164,8 @@ a {
 .contribution-count {
   text-align: left;
   grid-area: contributions;
-  grid-auto-flow: column;
-  grid-auto-columns: var(--square-size);
+  padding: 1em;
+  margin: 0;
 }
 
 .months { 
