--- a/src/App.css
+++ b/src/App.css
@@ -239,10 +239,13 @@ ul {
 }
 
 .profile-pic {
-  width: auto;
+  width: 5rem;
   height: 5rem;
-  border-radius: 500px;
-  padding: 0 1rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+  background-color: rgb(224, 224, 224);
+  background-size: cover;
+  background-position: top center;
 }
 
 .statcard-small {
