--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,13 @@
 
 .App {
   text-align: center;
-  background: #fff;
+  background: linear-gradient(rgb(231, 241, 255), rgb(232, 226, 255));
   background-size: cover;
   height: 100%;
   width: 100%;
   font-family: 'Poppins', sans-serif;
-  color: rgb(62, 53, 85);
+  color: rgb(64, 58, 80);
+  min-height: 100vh;
 }
 
 h5 {
@@ -128,7 +129,7 @@ ul {
   border: 1px;
   width: 20em;
   color: #3F4573;
-  background-color: rgb(241, 241, 243);
+  background-color: #fff;
   font-family: 'Poppins', sans-serif;
   
 }
@@ -214,7 +215,7 @@ ul {
 }
 
 .squares li {
-  background-color: rgb(230, 230, 230);
+  background-color: rgba(255, 255, 255, 0.507);
   border-radius: 2px;
 }
 
@@ -253,7 +254,6 @@ ul {
   flex-direction: column;
   justify-content: center;
   grid-area: profile-section;
-  background-color: rgb(224, 226, 255);
   padding: 1rem;
 }
 
@@ -262,7 +262,7 @@ ul {
   height: 5rem;
   border-radius: 50%;
   margin-right: 1rem;
-  background-color: rgb(224, 224, 224);
+  background-color: rgb(230, 238, 255);
   background-size: cover;
   background-position: top center;
 }
@@ -276,7 +276,8 @@ ul {
   justify-content: space-between;
   padding: .5rem 2rem;
   border-radius: 1rem;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(200, 210, 255);
+  box-shadow: 10px 10px 11px -8px rgba(204,204,204,1);
   margin: 0.5rem 0.5rem 0 0.5rem;
 }
 
