--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 .App {
   text-align: center;
-  background: linear-gradient(rgb(231, 241, 255), rgb(232, 226, 255));
+  background: rgb(255, 255, 255);
   background-size: cover;
   height: 100%;
   width: 100%;
@@ -129,7 +129,7 @@ ul {
   border: 1px;
   width: 20em;
   color: #3F4573;
-  background-color: #fff;
+  background-color: rgb(243, 243, 243);
   font-family: 'Poppins', sans-serif;
   
 }
@@ -175,9 +175,9 @@ ul {
 }
 
 .contribution-count {
+  grid-area: contribution-count;
   text-align: left;
-  font-weight: 500;
-  margin: 0 0 1rem 0;
+  margin: 0;
 }
 
 .months { 
@@ -216,7 +216,7 @@ ul {
 }
 
 .squares li {
-  background-color: rgba(255, 255, 255, 0.507);
+  background-color: rgb(226, 226, 226);
   border-radius: 2px;
 }
 
@@ -236,10 +236,10 @@ ul {
 
 .dashboard-tiles {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   grid-template-areas: 
-  "profile-section ."
+  "profile-section today-heading"
   "profile-section today-section"
+  "profile-section contribution-count"
   "profile-section graph-section";
   justify-content: center;
   align-items: center;
@@ -248,9 +248,9 @@ ul {
 
 .graph-section {
   grid-area: graph-section;
-  background-color: #fff;
-  border-radius: 1rem;
+  border-radius: 3rem;
   padding: 2rem;
+  border: 1px solid rgb(167, 172, 248);
 }
 
 /* Dashboard Profile Section */
@@ -260,8 +260,6 @@ ul {
   justify-content: center;
   grid-area: profile-section;
   padding: 1rem;
-  background-color: #fff;
-  border-radius: 1rem;
 }
 
 .profile-pic {
@@ -283,26 +281,25 @@ ul {
   justify-content: space-between;
   padding: .5rem 2rem;
   border-radius: 1rem;
-  background-color: rgb(241, 169, 197);
-  color: #fff;
+  color: rgb(64, 58, 80);
   box-shadow: 10px 10px 11px -8px rgba(204,204,204,1);
   margin: 0.5rem 0.5rem 0 0.5rem;
 }
 
 .today-heading {
+  grid-area: today-heading;
   text-align: left;
   margin: 0;
 }
 
 .today-section {
   grid-area: today-section;
-  background-color: #fff;
-  border-radius: 1rem;
   padding: 2rem;
 }
 
 .today-card {
   margin: 1rem;
+  border-radius: 3rem;
 }
 
 .today-card-group {
