--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+@import './style/Dashboard.css';
+@import './style/Navigation.css';
+@import './style/Pomodoro.css';
 
 .App {
   text-align: center;
@@ -40,80 +43,6 @@ ul {
   align-items: center;
 }
 
-.full-width{
-  width: 100vw;
-  margin: 0 8rem;
-}
-
-.pomodoro {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 22em;
-  height: 22em;
-  background-color: transparent;
-  border-radius: 200px;
-  border: 1.5px solid rgb(62, 53, 85);
-}
-
-.increment-btn {
-  background-color: transparent;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  color: rgb(62, 53, 85);
-  font-size: 1em;
-  padding: 0.5em;
-}
-
-.timer-settings {
-  display: flex;
-  flex-direction: row;
-  font-size: 3em;
-  color: rgb(62, 53, 85);
-}
-
-/* Nav Bar Styling */
-.navigation {
-  background-color: transparent;
-  display: flex;
-  justify-content: space-between;
-  padding:  1em 2em 2em 2em;
-  align-items: center;
-}
-
-.nav-labels {
-  float: right;
-  width: 20vw;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.nav-labels a {
-  text-decoration: none;
-  color: rgb(62, 53, 85);
-}
-
-.logo {
-  display: flex;
-  flex-direction: row;
-}
-
-.logo-img {
-  width: 2rem;
-  padding-right: 1rem;
-}
-
-.start-btn {
-  border: none;
-  outline: none;
-  padding: 10px;
-  border-radius: 40px;
-  background-color: transparent;
-}
-
 /* Login Page */
 .login-form {
   display: flex;
@@ -150,167 +79,6 @@ ul {
   color: #fff;
   font-family: 'Poppins', sans-serif;
   font-size: .9em;
-}
-
-/* Contribution Graph */
-
-:root {
-  --square-size: 13px;
-  --square-gap: 5px;
-  --week-width: calc(var(--square-size) + var(--square-gap));
-}
-
-.contribution-graph {
-  display: inline-grid;
-  grid-template-areas: 
-  "empty months" 
-  "days squares";
-  grid-template-columns: auto 1fr;
-  font-size: 0.7rem;
-
-}
-
-.contribution-graph ul {
-  list-style: none;
-}
-
-.contribution-count {
-  grid-area: contribution-count;
-  text-align: left;
-  margin: 0;
-}
-
-.months { 
-  grid-area: months; 
-  display: grid;
-  grid-template-columns: calc(var(--week-width) * 4) /* Jan */
-                         calc(var(--week-width) * 4) /* Feb */
-                         calc(var(--week-width) * 4) /* Mar */
-                         calc(var(--week-width) * 5) /* Apr */
-                         calc(var(--week-width) * 4) /* May */
-                         calc(var(--week-width) * 4) /* Jun */
-                         calc(var(--week-width) * 5) /* Jul */
-                         calc(var(--week-width) * 4) /* Aug */
-                         calc(var(--week-width) * 4) /* Sep */
-                         calc(var(--week-width) * 5) /* Oct */
-                         calc(var(--week-width) * 4) /* Nov */
-                         calc(var(--week-width) * 5) /* Dec */;
-}
-.days { grid-area: days; }
-
-.days li:nth-child(odd) {
-  visibility: hidden;
-}
-
-.squares { 
-  grid-area: squares; 
-  grid-auto-flow: column;
-  grid-auto-columns: var(--square-size);
-}
-
-.days,
-.squares {
-  display: grid;
-  grid-gap: var(--square-gap);
-  grid-template-rows: repeat(7, var(--square-size));
-}
-
-.squares li {
-  background-color: rgb(226, 226, 226);
-  border-radius: 2px;
-}
-
-.squares li[data-level="1"] {
-  background-color: rgb(200, 210, 255);
-}
-
-.squares li[data-level="2"] {
-  background-color: rgb(167, 172, 248);
-}
-
-.squares li[data-level="3"] {
-  background-color: rgb(114, 96, 218);
-}
-
-/* Dashboard Data Cards */
-
-.dashboard-tiles {
-  display: grid;
-  grid-template-areas: 
-  "profile-section today-heading"
-  "profile-section today-section"
-  "profile-section contribution-count"
-  "profile-section graph-section";
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-}
-
-.graph-section {
-  grid-area: graph-section;
-  border-radius: 3rem;
-  padding: 2rem;
-  border: 1px solid rgb(167, 172, 248);
-}
-
-/* Dashboard Profile Section */
-.profile-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  grid-area: profile-section;
-  padding: 1rem;
-}
-
-.profile-pic {
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50%;
-  margin-right: 1rem;
-  background-color: rgb(230, 238, 255);
-  background-size: cover;
-  background-position: top center;
-}
-
-.profile-card {
-  display: flex;
-}
-
-.statcard-small {
-  display: flex;
-  justify-content: space-between;
-  padding: .5rem 2rem;
-  border-radius: 1rem;
-  color: rgb(64, 58, 80);
-  box-shadow: 10px 10px 11px -8px rgba(204,204,204,1);
-  margin: 0.5rem 0.5rem 0 0.5rem;
-}
-
-.today-heading {
-  grid-area: today-heading;
-  text-align: left;
-  margin: 0;
-}
-
-.today-section {
-  grid-area: today-section;
-  padding: 2rem;
-}
-
-.today-card {
-  margin: 1rem;
-  border-radius: 3rem;
-}
-
-.today-card-group {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.dashboard-heading {
-  font-size: 1.5rem;
-  font-weight: 500;
-  margin: 0.5rem;
 }
 
 /* Kanban */
