Clean up styling

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 @import './style/Dashboard.css';
 @import './style/Navigation.css';
 @import './style/Pomodoro.css';
+@import './style/Tasks.css';
+@import './style/Auth.css';
 
 .App {
   text-align: center;
@@ -41,48 +43,4 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-/* Login Page */
-.login-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.login-field {
-  border-radius: 5px;
-  margin: .5em;
-  padding: 1em;
-  outline: none;
-  border: 1px;
-  width: 20em;
-  color: #3F4573;
-  background-color: rgb(243, 243, 243);
-  font-family: 'Poppins', sans-serif;
-  
-}
-
-::placeholder {
-  color: #3F4573;
-  font-family: 'Poppins', sans-serif;
-}
-
-.login-button {
-  border-radius: 50px;
-  width: fit-content;
-  margin: 1em;
-  padding: .8em 3em;
-  outline: none;
-  border: none;
-  background-color: rgb(167, 172, 248);
-  color: #fff;
-  font-family: 'Poppins', sans-serif;
-  font-size: .9em;
-}
-
-/* Kanban */
-
-.task-card {
-  font-weight: bolder;
 }
