--- a/src/style/Dashboard.css
+++ b/src/style/Dashboard.css
@@ -83,13 +83,14 @@
   .dashboard-tiles {
     display: grid;
     grid-template-areas: 
-    "profile-section today-heading"
-    "profile-section today-section"
-    "profile-section contribution-count"
-    "profile-section graph-section";
+    "today-heading profile-section"
+    "today-section profile-section"
+    "contribution-count profile-section"
+    "graph-section profile-section";
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    height: 100%;
   }
   
   .graph-section {
@@ -106,6 +107,8 @@
     justify-content: center;
     grid-area: profile-section;
     padding: 1rem;
+    background-color: rgb(200, 210, 255);
+    height: 100%;
   }
   
   .profile-pic {
@@ -129,7 +132,6 @@
     border-radius: 1rem;
     color: rgb(64, 58, 80);
     box-shadow: 10px 10px 11px -8px rgba(204,204,204,1);
-    margin: 0.5rem 0.5rem 0 0.5rem;
   }
   
   .today-heading {
@@ -144,7 +146,6 @@
   }
   
   .today-card {
-    margin: 1rem;
     border-radius: 3rem;
   }
   
@@ -156,5 +157,5 @@
   .dashboard-heading {
     font-size: 1.5rem;
     font-weight: 500;
-    margin: 0.5rem;
+    margin: 0;
   }
