--- a/src/style/Navigation.css
+++ b/src/style/Navigation.css
@@ -5,6 +5,7 @@
     background-color: rgb(236, 231, 250);
     height: 100%;
     z-index: 9999;
+    margin-right: 2rem;
   }
   
   .nav-labels a {
