--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,9 @@ body > #root > div {
 .full-width {
   height: 100%;
   min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 h5 {
