--- a/src/style/Navigation.css
+++ b/src/style/Navigation.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     background-color: rgb(236, 231, 250);
-    height: 100%;
+    height: 100vh;
     z-index: 9999;
     margin-right: 2rem;
   }
