--- a/src/style/Navigation.css
+++ b/src/style/Navigation.css
@@ -1,10 +1,16 @@
-  .nav-labels {
+  .nav-wrapper {
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    position: fixed;
+  }
+  
+  .nav {
+    height: 100vh;
     float: left;
     display: flex;
     flex-direction: column;
     background-color: rgb(236, 231, 250);
-    height: 100vh;
-    z-index: 9999;
     margin-right: 2rem;
   }
   
