Create tasks page

--- a/src/style/CommonVars.css
+++ b/src/style/CommonVars.css
@@ -1,4 +1,5 @@
 :root {
     --main-color: rgb(122, 138, 230);
     --body-text-color: rgb(21, 20, 31);
+    --secondary-bg-color: rgb(238, 239, 248);
 }
