--- a/src/style/Tasks.css
+++ b/src/style/Tasks.css
@@ -1,4 +1,28 @@
-/* Kanban */
+@import './CommonVars.css';
+
+/* Tasks */
+.tasks-wrapper {
+  background-color: var(--secondary-bg-color);
+  width: 80%;
+  height: 100%;
+  padding: 4rem;
+}
+
+/* Task card */
 .task-card {
-    font-weight: bolder;
+  padding: 1rem;
+  border-radius: .75rem;
+  background-color: #fff;
+  width: 12rem;
+  box-shadow: 5px 7px 12px -3px rgba(0,0,0,0.15);
+  }
+
+  .task-card p {
+    margin: 0;
+    font-size: .8rem;
+  }
+
+  .task-title {
+    font-size: 1.2rem;
+    font-weight: 500;
   }
