--- a/src/style/Tasks.css
+++ b/src/style/Tasks.css
@@ -1,11 +1,28 @@
 @import './CommonVars.css';
 
 /* Tasks */
-.tasks-wrapper {
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: var(--secondary-bg-color);
-  width: 80%;
-  height: 100%;
-  padding: 4rem;
+  height: 30rem;
+  border-radius: .5rem;
+}
+
+.column-name {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(188, 211, 255);
+  border-radius: .5rem .5rem 0 0;
+  padding: 1rem;
+  width: 15rem;
+  margin-bottom: .3rem;
+}
+
+.column-name p {
+  font-size: 1.2rem;
+  margin: 0;
 }
 
 /* Task card */
@@ -15,14 +32,15 @@
   background-color: #fff;
   width: 12rem;
   box-shadow: 5px 7px 12px -3px rgba(0,0,0,0.15);
-  }
+  margin: .3rem;
+}
 
-  .task-card p {
-    margin: 0;
-    font-size: .8rem;
-  }
+.task-card p {
+  margin: 0;
+  font-size: .8rem;
+}
 
-  .task-title {
-    font-size: 1.2rem;
-    font-weight: 500;
-  }
+.task-title {
+  font-size: 1.1rem;
+  font-weight: 500;
+}
