--- a/src/style/Assets.css
+++ b/src/style/Assets.css
@@ -61,16 +61,16 @@
   }
 
   /* Public Nav Bar */
-  .landing-nav {
-    position: fixed;
-    padding: 1.5rem;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    top: 0;
-    left: 0;
+.landing-nav {
+  position: fixed;
+  padding: .5rem;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 
 .landing-nav-labels-wrapper {
