--- a/src/style/Assets.css
+++ b/src/style/Assets.css
@@ -62,7 +62,7 @@
 
   /* Public Nav Bar */
 .landing-nav {
-  position: fixed;
+  position: absolute;
   padding: .5rem;
   box-sizing: border-box;
   display: flex;
