--- a/src/style/Landing.css
+++ b/src/style/Landing.css
@@ -3,7 +3,37 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    justify-items: center;
+    overflow-x: hidden;
+}
+
+/* Public Nav Bar */
+.landing-nav {
+    padding: .5rem;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    overflow-x: hidden;
+}
+  
+.landing-nav-labels-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.landing-nav-labels {
+    margin-left: 2rem;
+    font-weight: bold;
+}
+
+.landing-nav-labels a {
+color: var(--body-text-color);
+}
+
+.landing-nav-button {
+    margin: 0 0 0 0.5rem;
+    padding: .7em 1.5em;
 }
 
 /* Hero Section */
@@ -11,7 +41,6 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    width: 100%;
     padding: .5rem;
     box-sizing: border-box;
     margin: 0 5rem;
