Spacing on landing page

--- a/src/style/Landing.css
+++ b/src/style/Landing.css
@@ -15,6 +15,7 @@
     align-items: center;
     justify-content: space-between;
     overflow-x: hidden;
+    margin-bottom: 2rem;
 }
   
 .landing-nav-labels-wrapper {
